# trend_radar

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/review-web/: .env.example  README.md  package-lock.json  package.json  server.js
config/: aliases.yml  discovery_keywords.yml  keywords.yml  scoring.yml
data/: sample_threads_posts.json
docs/: duckdb-schema.md
docs/agent-handoff/: latest-handoff.md
docs/agent-progress/: 2026-07-09-session-001-foundation.md  2026-07-09-session-002-smoke-test.md  2026-07-09-session-003-agent-skills.md  2026-07-09-session-004-duckdb-foundation.md  2026-07-09-session-005-threads-keyword-collector.md  2026-07-09-session-006-entity-detector.md  2026-07-10-session-007-env-loader.md  2026-07-10-session-008-cleanup-build-runtime.md  2026-07-10-session-009-duckdb-path-resolution.md  2026-07-10-session-011-sample-mode-validation.md  (+25 more)
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: candidates.rs  config.rs  costs.rs  database.rs  discovery.rs  entities.rs  health.rs  mod.rs  regions.rs  reports.rs  sentiments.rs  threads.rs  weekly.rs
src-tauri/src/models/: entities.rs  mod.rs  threads.rs  trend.rs
src-tauri/src/services/: candidate_review.rs  cost_classifier.rs  discovery_crawler.rs  duckdb_service.rs  entity_detector.rs  mod.rs  region_classifier.rs  report_exporter.rs  sentiment_classifier.rs  threads.rs  threads_client.rs  weekly_aggregator.rs
src-tauri/src/utils/: config.rs
(+13 files in other folders)
