[package]
name = "ai-agent-trend-radar"
version = "0.1.0"
description = "Local-first desktop app for AI Agent trend intelligence."
authors = ["AI Agent Trend Radar contributors"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15.7"
duckdb = { version = "1.10504.0", features = ["bundled"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tauri = { version = "2", features = [] }
